tests/invalid/list_sort_tuple_element_unsupported/main.py
def run_case() -> None:
    xs: list[tuple[int, int]] = [(2, 1), (1, 2)]
    xs.sort()


if __name__ == "__main__":
    run_case()
